simple-react-full-stack/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-react-full-stack
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: simple-react-full-stack
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
