simple-react-full-stack/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-react-full-stack
spec:
  tls:
    - hosts:
        - react.prod.local
      secretName: react-prod-local-tls
  rules:
    - host: react.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-react-full-stack
                port:
                  number: 80
